--- a/DuoYuTV/DuoYuTV/Base.lproj/Home~.storyboard
+++ b/DuoYuTV/DuoYuTV/Base.lproj/Home~.storyboard
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fk3-LB-1wb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Live View Controller-->
+        <scene sceneID="V1D-9D-auK">
+            <objects>
+                <viewController id="FMm-I7-zX7" customClass="LiveViewController" customModule="DuoYuTV" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ymn-lp-k9A"/>
+                        <viewControllerLayoutGuide type="bottom" id="rfB-vx-OV4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uWS-Pl-FdH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="C3S-xo-Yft"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Xf-0B-2ke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1884" y="-645.42728635682158"/>
+        </scene>
         <!--Me View Controller-->
         <scene sceneID="cac-xl-vQO">
             <objects>
@@ -24,6 +43,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XyV-4S-daV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1900" y="790.25487256371821"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="gTm-BJ-Ncp">
+            <objects>
+                <viewController id="Ebs-j1-0zP" customClass="HomeViewController" customModule="DuoYuTV" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Onz-uK-FuX"/>
+                        <viewControllerLayoutGuide type="bottom" id="FGV-Sy-26j"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="49u-Jv-otE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="J2T-ns-0Az"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FV6-eG-f80" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1884" y="-1321.8890554722639"/>
         </scene>
         <!--Follow View Controller-->
         <scene sceneID="7VR-45-7L3">
@@ -54,8 +92,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="uLc-Z1-Veu" kind="relationship" relationship="viewControllers" id="g0H-3P-7st"/>
-                        <segue destination="BVt-ix-pt2" kind="relationship" relationship="viewControllers" id="moo-9M-7Zg"/>
+                        <segue destination="pES-nD-6v7" kind="relationship" relationship="viewControllers" id="g0H-3P-7st"/>
+                        <segue destination="2Ik-mJ-bK3" kind="relationship" relationship="viewControllers" id="moo-9M-7Zg"/>
                         <segue destination="ebH-ru-goX" kind="relationship" relationship="viewControllers" id="XQs-jH-mAP"/>
                         <segue destination="73t-R2-uXI" kind="relationship" relationship="viewControllers" id="kpc-Wx-jwg"/>
                     </connections>
@@ -63,6 +101,44 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hEi-e2-DWr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-762" y="-272"/>
+        </scene>
+        <!--首页-->
+        <scene sceneID="pZ3-kv-qQX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pES-nD-6v7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="l6m-ZS-WYg"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qbJ-di-BiT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ebs-j1-0zP" kind="relationship" relationship="rootViewController" id="Qkt-si-2YY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZvA-c0-oDD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="944.79999999999995" y="-1321.8890554722639"/>
+        </scene>
+        <!--直播-->
+        <scene sceneID="KF6-Im-U7U">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2Ik-mJ-bK3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="直播" image="btn_column_normal" selectedImage="btn_column_selected" id="AQG-bc-zGU"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fO5-BM-1uj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="FMm-I7-zX7" kind="relationship" relationship="rootViewController" id="vYK-ZY-zxg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SQb-rl-e6T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="944.79999999999995" y="-645.42728635682158"/>
         </scene>
         <!--关注-->
         <scene sceneID="buO-By-tPB">
@@ -102,28 +178,12 @@
             </objects>
             <point key="canvasLocation" x="960.79999999999995" y="790.25487256371821"/>
         </scene>
-        <!--Home-->
-        <scene sceneID="l2G-k9-K7i">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Home" id="uLc-Z1-Veu" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="0s8-7I-lAv"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EZx-9K-bfW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="944.79999999999995" y="-1321.8890554722639"/>
-        </scene>
-        <!--Live-->
-        <scene sceneID="vxM-iU-pJl">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Live" id="BVt-ix-pt2" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="hdS-Fi-7Ub"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dhX-VO-zxl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="944.79999999999995" y="-645.42728635682158"/>
-        </scene>
     </scenes>
     <resources>
+        <image name="btn_column_normal" width="24" height="24"/>
+        <image name="btn_column_selected" width="24" height="24"/>
+        <image name="btn_home_normal" width="24" height="24"/>
+        <image name="btn_home_selected" width="24" height="24"/>
         <image name="btn_live_normal" width="30" height="24"/>
         <image name="btn_live_selected" width="30" height="24"/>
         <image name="btn_user_normal" width="24" height="24"/>
