--- a/DuoYuTV/DuoYuTV/Me~.storyboard
+++ b/DuoYuTV/DuoYuTV/Me~.storyboard
@@ -6,6 +6,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Me View Controller-->
+        <scene sceneID="cac-xl-vQO">
+            <objects>
+                <viewController id="D2R-fj-bs5" customClass="MeViewController" customModule="DuoYuTV" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pOW-aH-b69"/>
+                        <viewControllerLayoutGuide type="bottom" id="2p3-1C-2E2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bmT-vq-REa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="c03-f3-uxG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XyV-4S-daV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1900" y="790.25487256371821"/>
+        </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="geK-Vp-G2k">
             <objects>
@@ -19,12 +38,31 @@
                         <segue destination="uLc-Z1-Veu" kind="relationship" relationship="viewControllers" id="g0H-3P-7st"/>
                         <segue destination="BVt-ix-pt2" kind="relationship" relationship="viewControllers" id="moo-9M-7Zg"/>
                         <segue destination="Y98-e8-iaR" kind="relationship" relationship="viewControllers" id="XQs-jH-mAP"/>
-                        <segue destination="aZP-RA-rno" kind="relationship" relationship="viewControllers" id="kpc-Wx-jwg"/>
+                        <segue destination="73t-R2-uXI" kind="relationship" relationship="viewControllers" id="kpc-Wx-jwg"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hEi-e2-DWr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-762" y="-272"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="4pN-12-qfJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="73t-R2-uXI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="我的" image="btn_user_normal" selectedImage="btn_user_selected" id="Lzs-a4-Gvm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="q1A-t1-zpd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="D2R-fj-bs5" kind="relationship" relationship="rootViewController" id="qej-n0-0TI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MMF-gP-YcN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="960.79999999999995" y="790.25487256371821"/>
         </scene>
         <!--Home-->
         <scene sceneID="l2G-k9-K7i">
@@ -34,7 +72,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EZx-9K-bfW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="605" y="-459"/>
+            <point key="canvasLocation" x="944.79999999999995" y="-1321.8890554722639"/>
         </scene>
         <!--Live-->
         <scene sceneID="vxM-iU-pJl">
@@ -44,7 +82,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dhX-VO-zxl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="614" y="-309"/>
+            <point key="canvasLocation" x="944.79999999999995" y="-645.42728635682158"/>
         </scene>
         <!--Follow-->
         <scene sceneID="9wa-A2-fuK">
@@ -54,17 +92,11 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mbl-dB-zJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="626" y="-221"/>
-        </scene>
-        <!--Me-->
-        <scene sceneID="hPa-qx-M8E">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Me" id="aZP-RA-rno" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="x1b-z5-mud"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vK0-f5-o1w" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="606" y="-57"/>
+            <point key="canvasLocation" x="944.79999999999995" y="26.53673163418291"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_user_normal" width="24" height="24"/>
+        <image name="btn_user_selected" width="24" height="24"/>
+    </resources>
 </document>
